--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.4.16",
     "morgan": "~1.6.1",
+    "mysql": "^2.10.2",
     "serve-favicon": "~2.3.0"
   }
 }
